[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3-1"
path = "src/3/part1/main.rs"

[[bin]]
name = "3-2"
path = "src/3/part2/main.rs"

[[bin]]
name = "10-1"
path = "src/10/part1/main.rs"

[[bin]]
name = "10-2"
path = "src/10/part2/main.rs"

[[bin]]
name = "11-1"
path = "src/11/part1/main.rs"

[[bin]]
name = "11-2"
path = "src/11/part2/main.rs"

[[bin]]
name = "14-1"
path = "src/14/part1/main.rs"

[[bin]]
name = "14-2"
path = "src/14/part2/main.rs"

[[bin]]
name = "15-1"
path = "src/15/part1/main.rs"

[[bin]]
name = "15-2"
path = "src/15/part2/main.rs"

[dependencies]
cgraph = { path = "../../cgraph" }
