[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1"
path = "src/1/main.rs"

[[bin]]
name = "2"
path = "src/2/main.rs"

[[bin]]
name = "3-1"
path = "src/3/part1/main.rs"

[[bin]]
name = "3-2"
path = "src/3/part2/main.rs"

[[bin]]
name = "10-1"
path = "src/10/part1/main.rs"

[[bin]]
name = "10-2"
path = "src/10/part2/main.rs"

[[bin]]
name = "11-1"
path = "src/11/part1/main.rs"

[[bin]]
name = "11-2"
path = "src/11/part2/main.rs"

[[bin]]
name = "14-1"
path = "src/14/part1/main.rs"

[[bin]]
name = "14-2"
path = "src/14/part2/main.rs"

[[bin]]
name = "15-1"
path = "src/15/part1/main.rs"

[[bin]]
name = "15-2"
path = "src/15/part2/main.rs"

[[bin]]
name = "16-1"
path = "src/16/part1/main.rs"

[[bin]]
name = "16-2"
path = "src/16/part2/main.rs"

[[bin]]
name = "17-1"
path = "src/17/part1/main.rs"

[[bin]]
name = "17-2"
path = "src/17/part2/main.rs"

[[bin]]
name = "18-1"
path = "src/18/part1/main.rs"

[[bin]]
name = "18-2"
path = "src/18/part2/main.rs"

[[bin]]
name = "19-1"
path = "src/19/part1/main.rs"

[[bin]]
name = "19-2"
path = "src/19/part2/main.rs"

[[bin]]
name = "20-1"
path = "src/20/part1/main.rs"

[[bin]]
name = "20-2"
path = "src/20/part2/main.rs"

[[bin]]
name = "21-1"
path = "src/21/part1/main.rs"

[[bin]]
name = "21-2"
path = "src/21/part2/main.rs"

[[bin]]
name = "22-1"
path = "src/22/part1/main.rs"

[[bin]]
name = "22-2"
path = "src/22/part2/main.rs"

[[bin]]
name = "23-1"
path = "src/23/part1/main.rs"

[[bin]]
name = "23-2"
path = "src/23/part2/main.rs"

[[bin]]
name = "24-1"
path = "src/24/part1/main.rs"

[[bin]]
name = "25"
path = "src/25/main.rs"

[dependencies]
cgraph = { path = "../../cgraph" }
itertools = "0.12.0"
